# Foundmusic

./: .gitignore  README.md  analysis.py  asynchronous_synthesis.py  grains_descriptors.json  granular_synthesis.ipynb  pyproject.toml  stochastic_gs.ipynb  synthesizer.py  test.ipynb
corpus/flute_sample_1/metadata/: 20260505_34fcaa.json  20260601_2ea3c3.json  20260601_514483.json  20260601_83c6e6.json  20260601_963589.json  20260601_a3510a.json  20260601_abc594.json  20260601_aed8d6.json  20260601_bcf742.json  20260601_f08e39.json  grain_0.06_s_metadata_a0b6ab65.csv  grain_0.14_s_metadata_e118eb9b.csv
corpus/guitar_sample_1/metadata/: 20260506_143dd5.json  20260506_4723f6.json  20260506_650909.json  20260511_0003ba.json  20260512_553155.json  (+3 more)
corpus/test_sample_1/: metadatabad19egrain_metadata.csv
docs/: citations.bib  evaluation_setup.xlsx  notebook_logs.md  notebook_summaries.md  notebook_summarties.md  notes.md  references.csv
notebooks/: 004_markov_gs.ipynb  008_comparative_study.ipynb  010_poster_visualizations.ipynb  6_grain_analysis.ipynb  9_grain_analysis.ipynb
src/fieldmusic.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/frontend/: index.html
src/grains/: 3_stochastic_gs.ipynb  4_markov_gs.ipynb  5_markov_gs.ipynb  6_grain_analysis.ipynb  7_pipeline_test.ipynb  8_comparative_study.ipynb  9_grain_analysis.ipynb  algorithms.py  analysis.py  evaluation.py  evaluation_narrow.py  helpers.py  poster_visualizations.ipynb  slicing.py  trials.py  writing.py
src/notebooks/: 10_poster_visualizations.ipynb  7_pipeline_test.ipynb
(+565 files in other folders)
